--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" data-google-analytics-opt-out=""><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>RYTUNYN : ARCHITECT OF HAPPINESS</title>
@@ -233,7 +231,7 @@
                 <line x1="400" y1="50" x2="350" y2="50"></line>
                 <circle cx="400" cy="50" r="3"></circle>
                 <text x="340" y="58" text-anchor="end" class="font-sans text-item-bold">MIRROR PARADOX</text>
-                <text x="340" y="90" text-anchor="end" class="font-sans text-item">AUTHENTICITY</text>
+                <text x="340" y="110" text-anchor="end" class="font-sans text-item">AUTHENTICITY</text>
             </g>
 
             <g class="sequence-item right-side" data-index="2" data-y="150">
@@ -434,8 +432,8 @@
             <g class="sequence-item center-side" transform="translate(0, 500)" data-index="31" data-y="500">
                 <circle cx="400" cy="0" r="60" fill="none" stroke="#FFF" stroke-width="0.5" class="breathe"></circle>
                 <circle cx="400" cy="0" r="50" fill="#111"></circle>
-                <text x="400" y="5" text-anchor="middle" fill="#FFF" class="font-serif text-item-bold" font-size="20">TRANSCENDENTAL</text>
-                <text x="400" y="25" text-anchor="middle" fill="#888" class="font-sans" font-size="10" letter-spacing="0.2em">NARRATIVE INTELLIGENCE</text>
+                <text x="400" y="5" text-anchor="middle" fill="#FFF" class="font-serif text-item-bold" font-size="20">HAPPINESS</text>
+                <text x="400" y="45" text-anchor="middle" fill="#888" class="font-sans" font-size="14" letter-spacing="0.2em">NARRATIVE INTELLIGENCE</text>
             </g>
         </g>
 
@@ -543,5 +541,5 @@
     });
 </script>
 
-</body>
-</html>
+
+</body></html>
