--- a/index.html
+++ b/index.html
@@ -253,6 +253,14 @@
             #footer-group text {
                 font-size: 28px !important;
             }
+
+            /* 모바일 로고 크기 축소 */
+            .fixed-logo {
+                width: 35px;
+                height: 35px;
+                top: 12px;
+                left: 12px;
+            }
         }
     </style>
 </head>
