--- a/index.html
+++ b/index.html
@@ -1108,8 +1108,8 @@
                 items.forEach(item => {
                     ScrollTrigger.create({
                         trigger: item,
-                        start: "top 60%", // Activate when element top hits 60% of viewport height (slightly below center)
-                        end: "bottom 40%", // Deactivate when element bottom hits 40% of viewport height (slightly above center)
+                        start: "top 90%", // Activate early (near bottom)
+                        end: "bottom 10%", // Deactivate late (near top)
                         toggleClass: "active",
                         invalidateOnRefresh: true
                     });
