Widen scroll active zone to 95%/5%

--- a/index.html
+++ b/index.html
@@ -1108,8 +1108,8 @@
                 items.forEach(item => {
                     ScrollTrigger.create({
                         trigger: item,
-                        start: "top 90%", // Activate early (near bottom)
-                        end: "bottom 10%", // Deactivate late (near top)
+                        start: "top 95%",
+                        end: "bottom 5%",
                         toggleClass: "active",
                         invalidateOnRefresh: true
                     });
