--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@
                         });
                     }, {
                         threshold: 0.1,
-                        rootMargin: '-20% 0px -20% 0px'  // Center Focus: Active in middle 60% of viewport
+                        rootMargin: '-10% 0px -30% 0px'  // Active zone: 10% from top to 70% (covers 30%-90% visually)
                     });
 
                     items.forEach(item => observer.observe(item));
@@ -1110,8 +1110,8 @@
                     items.forEach(item => {
                         ScrollTrigger.create({
                             trigger: item,
-                            start: "center 80%", // Activate when element CENTER hits 80% of viewport
-                            end: "center 20%", // Deactivate when element CENTER hits 20% of viewport
+                            start: "center 90%", // Activate when element CENTER hits 90% of viewport
+                            end: "center 30%", // Deactivate when element CENTER hits 30% of viewport
                             toggleClass: "active",
                             invalidateOnRefresh: true
                         });
